--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,4 +1,5 @@
 nav {
+    
     font-weight: 200;
     img {
         width: 175px;
@@ -39,6 +40,10 @@ nav {
         }
     }
 
+}
+
+.navbar {
+    z-index: 1090;
 }
 
 
