--- a/scss/_small_content_boxes.scss
+++ b/scss/_small_content_boxes.scss
@@ -33,8 +33,8 @@
 }
 
 .carousel-controls{
-    bottom: 2rem; 
-    width:300px;
+    margin-top: 0.75rem; 
+    //width:100%;
 }
 
 .carousel-indicators {
